# game-translator

./: .gitignore  Cargo.toml  config.json  translation_cache.json
src/: app_state.rs  cache.rs  config.rs  hotkey.rs  main.rs  ocr.rs  overlay.rs  processing.rs  region_selector.rs  screenshot.rs  settings_ui.rs  settings_window.rs  subtitle.rs  translator.rs  tts.rs
src/overlay/: commands.rs  fonts.rs  mod.rs  render.rs  settings_window.rs
src/platform/: mod.rs  windows_overlay.rs
src/runtime/: config_watcher.rs  hotkeys.rs  mod.rs
src/settings_ui/: basic_tabs.rs  common.rs  history_openai_tabs.rs  hotkeys_tab.rs  lab_tab.rs  services_tab.rs
